file(GLOB_RECURSE PFOPT_FILES "*.hpp" "*.cpp")

if(MSVC)
    add_library(pfopt STATIC ${PFOPT_FILES})
else()
    add_library(pfopt SHARED ${PFOPT_FILES})
endif()

target_link_libraries(pfopt alglib)

if(MSVC)
    target_link_libraries(pfopt libCoinUtils)
    target_link_libraries(pfopt libClp)
    target_link_libraries(pfopt libipopt)
    target_link_libraries(pfopt libcoinhsl)
    target_link_libraries(pfopt libcoinblas)
    target_link_libraries(pfopt libcoinlapack)
    target_link_libraries(pfopt libcoinmetis)
else()
    target_link_libraries(pfopt Clp)
    target_link_libraries(pfopt ClpSolver)
    target_link_libraries(pfopt CoinUtils)
    target_link_libraries(pfopt Osi)
    target_link_libraries(pfopt OsiClp)
    target_link_libraries(pfopt ipopt)
endif()