file(GLOB_RECURSE PFOPT_FILES "*.hpp" "*.cpp")

add_library(pfopt STATIC ${PFOPT_FILES})

target_link_libraries(pfopt alglib)

if(MSVC)
    target_link_libraries(pfopt libCoinUtils)
    target_link_libraries(pfopt libClp)
    target_link_libraries(pfopt libipopt)
    target_link_libraries(pfopt libcoinhsl)
    target_link_libraries(pfopt libcoinblas)
    target_link_libraries(pfopt libcoinlapack)
    target_link_libraries(pfopt libcoinmetis)
else()
    target_link_libraries(pfopt Clp)
    target_link_libraries(pfopt ClpSolver)
    target_link_libraries(pfopt CoinUtils)
    target_link_libraries(pfopt Osi)
    target_link_libraries(pfopt OsiClp)
    target_link_libraries(pfopt ipopt)
    target_link_libraries(pfopt coinasl)
    target_link_libraries(pfopt coinhsl)
    target_link_libraries(pfopt coinmetis)
    target_link_libraries(pfopt coinmumps)
    target_link_libraries(pfopt openblas)
endif()